# scrape-store-agents

./: .gitignore  Dockerfile  LICENSE  README.md  WEB_UI_DEMO.md  docker-compose.yml  pyproject.toml  pytest.ini
config/: config.example.yml  sources.yaml  sources.yaml.example
examples/: quickstart.py
scrape_store_agents/: __init__.py  cli.py  opentelemetry_setup.py
scrape_store_agents/agents/: __init__.py  base.py  reasoning.py  router.py  self_improving.py
scrape_store_agents/agents/scrapers/: __init__.py  web_scraper.py
scrape_store_agents/agents/vector_stores/: __init__.py  chromadb_store.py
scrape_store_agents/api/: __init__.py  main.py
scrape_store_agents/config/: config_loader.py  settings.py
scrape_store_agents/tests/: __init__.py  test_base.py  test_config.py  test_reasoning.py
scrape_store_agents/web/: __init__.py  routes.py
scrape_store_agents/web/static/css/: dashboard.css
scrape_store_agents/web/static/js/: dashboard.js
scrape_store_agents/web/templates/: dashboard.html
